2008-09-12  Marc Singer  <elf@zealous.synapse.com>

	* src/apex/cmd-image-uboot.c: Added uboot image support.  No
	multi-images, but the rest works OK.

	* src/apex/region-checksum.c (region_checksum): Added neglected
	check for whether or not the caller wants the length added to the
	checksum

	* src/apex/cmd-image-apex.c (handle_apex_image): Factored out the
	APEX image code so we can implement UBOOT in separate file with
	optional compilation.

2008-09-11  Marc Singer  <elf@zealous.synapse.com>

	* scripts/Makefile.build (modorder-target): Removed build of the
	module.order files.

	* src/apex/cmd-copy.c (cmd_copy): Fixed the return value so copy
	doesn't stop startup.

	* src/apex/cmd-image.c (handle_load_apex_image): Cleaned up the
	output and make the check and load functions look similar in
	output.

	* src/apex/region-checksum.c (region_checksum): Fixed checksumming
	so that we can sum over a defined range instead of being limited
	to summing the whole region.

2008-09-10  Marc Singer  <elf@buici.com>

	* src/apex/cmd-image.c (apex_image): Refactored cmd-image code to
	support a single driver for parsing through the header data.
	
2008-09-10  Marc Singer  <elf@zealous.synapse.com>

	* src/apex/cmd-image.c (cmd_image): Fixed cascade testing of
	options.

	* src/lib/gmtime.c (gmtime_r): Fixed year calc (typo).
	(gmtime_r): Fixed month calc, off by one.
	(convert_two_digits): Fixed representation of numbers; digits
	swapped.

	* src/lib/strimatch.c (strimatch): Fixed this function to properly
	match when the case is identical.

2008-08-28  Marc Singer  <elf@zealous.synapse.com>

	* src/apex/cmd-help.c (compare_commands): Righted command sort
	order.
	(cmd_help): Eliminated a possible overflow of command listing
	array.

2008-08-27  Marc Singer  <elf@zealous.synapse.com>

	* src/drivers/drv-mem.c (memory_write): Fixed un-aligned write
	code.  The original test used were allowing invalid unaligned
	accesses.

2008-08-26  Marc Singer  <elf@zealous.synapse.com>
